Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1>
 <a id="ebscopy" class="anchor" href="#ebscopy" aria-hidden="true"><span class="octicon octicon-link"></span></a>ebscopy</h1>
 
-<p>(/ˈɛbskoʊˌpaɪ/, not /ˈɛbskɒpiː/)</p>
+<p>(<em>/ˈɛbskoʊˌpaɪ/,</em> not /ˈ<em>ɛbskɒpiː/</em>)</p>
 
 <p>The official Python wrapper for the EBSCO Discovery Service API.</p>
 
@@ -83,14 +83,12 @@ connection.disconnect()</pre></div>
 </ul>
 
 <h1>
-<a id="notes" class="anchor" href="#notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Notes</h1>
-
-<h1>
 <a id="links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h1>
 
 <ul>
-<li><a href="http://eds-api.ebscohost.com/Console">http://eds-api.ebscohost.com/Console</a></li>
-<li><a href="http://edswiki.ebscohost.com/EBSCO_Discovery_Service_API_User_Guide">http://edswiki.ebscohost.com/EBSCO_Discovery_Service_API_User_Guide</a></li>
+<li><a href="https://www.ebscohost.com/discovery">EBSCO Discovery</a></li>
+<li><a href="http://eds-api.ebscohost.com/Console">EDS API Console</a></li>
+<li><a href="http://edswiki.ebscohost.com/EBSCO_Discovery_Service_API_User_Guide">EDS API Wiki</a></li>
 </ul>
 
 <h1>
@@ -99,11 +97,15 @@ connection.disconnect()</pre></div>
 <p>Thanks to:</p>
 
 <ul>
-<li>EBSCO Information Services</li>
-<li>Dave Edwards - for hiring me</li>
-<li>Ron Burns - for letting Dave hire me</li>
-<li>Eric Frierson - for showing me how the API works</li>
-<li>Nitin Arora - for making the case for a Python EDS API wrapper and writing the original PyEDS</li>
+<li><a href="https://www.ebsco.com/">EBSCO Information Services</a></li>
+<li>
+<em>Dave Edwards</em> - for hiring me</li>
+<li>
+<em>Ron Burns</em> - for letting Dave hire me</li>
+<li>
+<em>Eric Frierson</em> - for showing me how the API works</li>
+<li>
+<em>Nitin Arora</em> - for making the case for a Python EDS API wrapper and writing the original PyEDS</li>
 </ul>
       </section>
 
